--- a/realisation/client/web/css/style1.css
+++ b/realisation/client/web/css/style1.css
@@ -1,11 +1,17 @@
 body{
-	background-color: #686868; 
+	background-color: #686868;
+	font-size: 5vw;
+	font-family: "lucida console";
+}
+h1 {
+    text-transform: uppercase;
 }
 input {
 	display: block;
+	font-size: 5vw;
 }
 header{
-	padding: 3%;
+	padding: 1.5%;
 	margin: 0.5%;
 	background-color: #abdb8e;
 	box-shadow: 3px 3px 0px white;
@@ -14,23 +20,25 @@ header{
 	display: inline-block;
 	margin: 0;
 	padding: 0;
-	margin-left: 5%;
-	margin-right: 5%;
 }
 #robot{
-	padding: 1%;
+	padding: 1.5%;
 	margin: 0.5%;
 	background-color: #abdb8e;
 	box-shadow: 3px 3px 0px white;
+}
+#robot span{
+	display: block;
 }
 .arduino{
 	background-color: white;
 	display: inline-block;
 	padding: 3%;
 	margin: 0.5%;
+	box-shadow: 3px 3px 0px #686868;
 }
 .arduino:active{
-	box-shadow: 1.5px 1.5px 0px white;
+	box-shadow: 1.5px 1.5px 0px #686868;
 	margin-left: 0.8%;
 	margin-right: 0.2%;
 }
@@ -39,7 +47,7 @@ header{
 	display: block;
 	text-align: center;
 	color: #686868;
-	font-size: 30px;
+	font-size: 5vw;
 }
 
 #gyro {
